// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CellTitleInput > should render the input 1`] = `
<form
  class="_edit-form_650db4"
>
  <label
    aria-hidden="true"
    class="sr-only"
    for="my-cell"
    hidden=""
  >
    title
  </label>
  <input
    id="my-cell"
  />
</form>
`;

exports[`CellTitleInput should render the input 1`] = `
<form
  class="theme-edit-form"
>
  <label
    aria-hidden="true"
    class="sr-only"
    for="my-cell"
    hidden=""
  >
    title
  </label>
  <input
    id="my-cell"
  />
</form>
`;
